# tunitas-temerarious-flagship

./: .gitignore  COPYRIGHT  ChangeLog  Makefile  Makefile.am  NEWS  NOTE.abandoned_branch_dev  PACKAGES.md  README.md  VERSION  buildconf  configure  configure.ac
addenda/anguish-answer/: .gitignore  Makefile.am  README  configure.ac
addenda/anguish-answer/check/lib/: .gitignore
addenda/anguish-answer/maintenance/: exp  nearby
addenda/anguish-answer/mk/: .gitignore
addenda/anguish-answer/src/app/dc/: Makefrag.am  c.main.xcpp
addenda/anguish-answer/src/lite/: Makefrag.am  namespace.xcpp  required.Character.xcpp  required.Character_Traits.xcpp
addenda/anguish-answer/src/lite/cli/: namespace.xcpp  option.Any.xcpp  option.Argv.xcpp  option.Boolean.Sentry.xcpp  option.Boolean.xcpp  option.any.xcpp  option.xcpp
addenda/anguish-answer/src/lite/regex/: Pattern.xcpp  match.xcpp  matching.Results.xcpp  namespace.xcpp  search.xcpp
addenda/anguish-answer/src/scold/: Makefrag.am  namespace.xcpp
addenda/anguish-answer/src/scold/easy/: Configuration.xcpp  List.xcpp  Makefrag.am  Map.xcpp  Program.xcpp  Project.xcpp  Searchpath.Constructor.xcpp  Searchpath.xcpp  back_inserter.xcpp  cascade.Context.xcpp  cascade.Matryoshka.xcpp  cascade.xcpp  core.Match.Cend.xcpp  core.Match.Cstart.xcpp  core.Match.DP.xcpp  core.Match.DPP.xcpp  core.Match.EBT.xcpp  core.Match.EDF.xcpp  core.Match.IPL.xcpp  core.Match.MP.xcpp  core.Match.TED.xcpp  core.Match.TEP.xcpp  core.Match.TSE.xcpp  core.Match.UET.xcpp  core.Match.UST.xcpp  core.Match.declaration.xcpp  core.Match.template.xcpp  core.Match.xcpp  core.State.xcpp  core.process.xcpp  core.xcpp  debuggable.xcpp  debugging.Formatter.Searchpath.xcpp  debugging.Formatter.xcpp  defaults.xcpp  diagnostic.xcpp  exception.Failing.xcpp  exception.Quitting.xcpp  exception.Usage.xcpp  exception.Version.xcpp  (+71 more)
addenda/anguish-answer/src/tests/unit/: Makefrag.am  easy.Fixture.xcpp  lite.Fixture.xcpp  lite.option.Argv.xcpp  lite.option.Fixture.xcpp  main.xcpp  multipath.Fixture.xcpp  namespace.xcpp  scold.Fixture.xcpp  suffix.Fixture.xcpp  want.Fixture.xcpp  want.ranges.Fixture.xcpp
addenda/anguish-answer/src/want/: Makefrag.am  aliases.any.xcpp  aliases.detail.Any.xcpp  aliases.detail.Remainder.xcpp  aliases.detail.Set.xcpp  aliases.detail.Starts_With.xcpp  aliases.required.Stringable.xcpp  aliases.starts_with.xcpp  namespace.xcpp  ranges.detail.Container.xcpp  ranges.detail.Direct.Iterator.xcpp  ranges.detail.Direct.xcpp  ranges.forward.xcpp  ranges.minmax.xcpp  ranges.required.Directable.xcpp  ranges.reverse.xcpp
addenda/anguish-answer/tests/: .gitignore  config.sh.in
addenda/anguish-answer/tests/examples/apple/: main.xcpp
addenda/anguish-answer/tests/examples/banana/: A.xcpp  main.xcpp
addenda/anguish-answer/tests/scripty/dc/: Makefrag.am  case.01.gold  case.01.test  (+18 more)
addenda/anguish-answer/tests/unit/: Makefrag.am  all.test  rigging.sh  scold.test
addenda/baleful-ballad/: .gitignore  Makefile.am  README  configure.ac
addenda/baleful-ballad/check/lib/: .gitignore
addenda/baleful-ballad/lib/: .gitignore
addenda/baleful-ballad/maintenance/: exp  nearby  v1  v2
addenda/baleful-ballad/mk/: compile.mk  install.mk
addenda/baleful-ballad/src/remonstrate/: Makefrag.am  Usage.xcpp  c.main.xcpp  main.xcpp  namespace.xcpp
addenda/baleful-ballad/src/scold/: Accruals.DEPEND.xcpp  Accruals.ENTAIL.xcpp  Accruals.IMPORT.xcpp  Accruals.xcpp  Configuration.xcpp  Director.xcpp  Directories.xcpp  Filenames.xcpp  Files.xcpp  Ground.xcpp  Makefrag.am  Makefrag.xcpp  Module.xcpp  PIO.xcpp  PIOIE.xcpp  Phase.xcpp  Phases.xcpp  Processor.xcpp  Reader.xcpp  Regeneration.xcpp  Stream.xcpp  Streams.xcpp  Submodule.xcpp  Suffix.xcpp  Version.xcpp  ispure.string.xcpp  ispure.xcpp  named.xcpp  namespace.xcpp  pluralize.xcpp  process.xcpp  to.Filenames.xcpp  to.Module.xcpp  to.Phase.xcpp  to.RESULT.Filenames.xcpp  to.RESULT.Module.xcpp  to.RESULT.Phase.xcpp  to.RESULT.Suffix.xcpp  to.RESULT.string.xcpp  to.Suffix.xcpp  (+2 more)
addenda/baleful-ballad/src/want/: Makefrag.am  doppelgang.xcpp  join.xcpp  namespace.xcpp  series.xcpp  tuple_cons.xcpp  tuple_rest.xcpp  tuppelgang.xcpp
addenda/baleful-ballad/tests/: .gitignore  self.test
addenda/baleful-ballad/tests/remonstrate/: Makefrag.am  example00.test  example00.xcpp  example01.test  example01.xcpp  example02.test  example03.test  example03.xcpp  example04.test  example04.xcpp  framework.sh  usage.test  version.test
addenda/baleful-ballad/tests/unit/: .gitignore  Makefrag.am  framework.sh
addenda/baleful-ballad/tests/usage/: Makefrag.am  remonstrate.test
addenda/hypogeal-twilight/tests/defuns-hgtw/: Makefile.am  configure.ac  driver  main.cpp
addenda/hypogeal-twilight/tests/defuns-scold/: .gitignore  configure.ac
tests/ac/TF_CHECK_MYSQLPP/: configure.ac  run.test
tests/ac/TF_CHECK_PACKAGES/: configure.ac  run.test
tests/simple/: .gitignore  Makefile.am  README  buildconf  configure.ac
tests/simple/maintenance/: e2e
tests/simple/src/: Makefrag.am  main.cpp
tests/simple/tests/: Makefrag.am  run1.test
tooling/: .gitignore  Makefile.am  buildconf  configure.ac
tooling/libexec/temerarious-flagship/: .gitignore
tooling/maintenance/: .gitignore  nearby  v1  v2
tooling/mk/: .gitignore
tooling/src/app/: Makefrag.am
tooling/src/app/roff/: Makefrag.am  main.xcpp  namespace.xcpp  process.Line.xcpp  process.xcpp  run.xcpp
tooling/src/app/tf/: Makefrag.am  c.main.xcpp  namespace.xcpp
tooling/src/std/is_error_code_enum/: tunitas.flagship.temerarious.error.code.Companion.xcpp
tooling/src/std/is_error_condition_enum/: tunitas.flagship.temerarious.error.condition.Companion.xcpp
tooling/src/tests/: namespace.xcpp
tooling/src/tests/roff/: c.main.xcpp  namespace.xcpp
tooling/src/tests/tf/: Fixture.xcpp  namespace.xcpp
tooling/src/tests/unit/: Fixture.xcpp  Makefrag.am  exception.Fixture.xcpp  namespace.xcpp  variable.Fixture.xcpp
tooling/tests/roff/: Makefrag.am
tooling/tests/scripty/roff/: Makefrag.am  all.test
tooling/tests/scripty/tf/: Makefrag.am
tooling/tests/tf/: Makefrag.am
(+1356 files in other folders)
