dnl
AC_INIT(test-all-defun, 0.0.0, testy@cranky.example.org)
SCOLD_INIT(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, AC_PACKAGE_BUGREPORT)

dnl all the possible macros...  in somewhat the correct order

SCOLD_COMPONENT_METADIRECTORY_TIERS

# these require some arguments
SCOLD_WITH_META_DIRECTORY([meta], [meta], [/opt/meta], [Meta Area])
SCOLD_WITH_AMBIENT_COMPONENT([ambience], [ambience], [Ambient Temperature])
SCOLD_WITH_COMMON([common], [common], [Common Stuff])
SCOLD_WITH_HEREIN([herein], [herein], [Herein Stuff])
SCOLD_WITH_MODULE([module], [module], [Module Stuff])
SCOLD_WITH_NONSTD([weird], [weird], [Weird Nonstandard])
SCOLD_WITH_SIBLING([sibling], [sibling], [Sibling Stuff])
SCOLD_WITH_STD([thing], [thing], [That Standard Thing])

SCOLD_WITH_HYPOGEAL_TWILIGHT
SCOLD_WITH_INCENDIARY_SOPHIST
SCOLD_WITH_NONSTD_GCC
SCOLD_WITH_NONSTD_MYSQL
SCOLD_WITH_NONSTD_BOOST
SCOLD_WITH_NONSTD_CPPUNIT
SCOLD_WITH_NONSTD_CURL
SCOLD_WITH_NONSTD_CURLPP
SCOLD_WITH_NONSTD_JSONCPP
SCOLD_WITH_NONSTD_SQLITE
SCOLD_WITH_NONSTD_UUID
SCOLD_DEFAULT_STD_VALUES
SCOLD_WITH_VERNACULAR_DOGGEREL

SCOLD_WITH_BOOST_LAYOUT
SCOLD_WITH_STD_REGEX
SCOLD_ENABLE_BOOST_LAYOUT
SCOLD_ENABLE_DEPRECATION_NOTIFICATION
SCOLD_ENABLE_GCC
SCOLD_ENABLE_GDB
SCOLD_ENABLE_GNU
SCOLD_ENABLE_MOCK_BUILD
SCOLD_ENABLE_RPM_PACKAGE_CHECKING
SCOLD_ENABLE_CONFIGURE_VERBOSE

dnl We have to be building something; something trivial.
AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([config.h])
AC_PREREQ([2.69])
AM_PROG_AR             dnl first
AC_PROG_LIBTOOL
AC_PROG_CXX
LT_PREREQ([2.4.2])
LT_INIT                dnl second
AC_LANG([C++])
# Checks for tools

SCOLD_CHECK_APACHE_HTTPD
SCOLD_CHECK_BOOST
SCOLD_CHECK_CPPUNIT
SCOLD_CHECK_CURL
SCOLD_CHECK_CURLPP
SCOLD_CHECK_GCC
dnl SCOLD_CHECK_JSON -------> ERROR (you can't even call it)
SCOLD_CHECK_JSONCPP
SCOLD_CHECK_MYSQLPP dnl ----> ERROR /usr/include/mysql++ is known bad
SCOLD_CHECK_SQLITE
SCOLD_CHECK_UUID
SCOLD_CHECK_BOOST_LAYOUT

# we are not (yet) doing submodule builds here
SCOLD_CONFIG_SUBMODULES([submodules], [])
SCOLD_MOCK_BUILD

SCOLD_MSG_VERBOSE([one arg])
SCOLD_MSG_VERBOSE([first message], [second message])
SCOLD_MSG_DEPRECATED([that_old_thing])

SCOLD_MAKE_OBJ_DIRECTORIES
SCOLD_PACKAGE_VARIABLES
SCOLD_REPORT_FINALLY

# output something
AC_OUTPUT
