# -*- autoconf -*-test code; but see the LICENSE file nearby.
dnl
dnl WATCHOUT - you MUST NOT have the macro name HGTW_WITH_USR_LOCAL as the package name (unquoted)
AC_INIT([testy-mctestface], [0.0.0], [testy@scold-lang.org])
HGTW_INIT(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, AC_PACKAGE_BUGREPORT)
AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
HGTW_CHECK_PACKAGES_ERROR([high-plains], [high_plains], [High Plains])
HGTW_FINALIZE
